# grove

./: Cargo.toml  DESIGN.md  README.md  V0.1.md  V0.3.md  V0.5.md  V0.6.md  V1.0.md  V1.1.md  V1.2.md  V1.3.md  V1.5.md  agents.md  prek.toml
.github/workflows/: ci.yml  release.yml
assets/: README.md
design/: DESIGN.md  V0.1.md  V0.2.md  V0.4.md  V0.7.md  V0.8.md  V0.9.md
homebrew/: grove.rb
src/: activity.rs  app.rs  async_evt.rs  config.rs  git.rs  github.rs  keymap.rs  main.rs  model.rs  paths.rs  state.rs  terminal.rs  theme.rs
src/ui/: add_repo.rs  badges.rs  confirm.rs  diff.rs  discovered.rs  help.rs  log_view.rs  main_pane.rs  mod.rs  sidebar.rs  text_input.rs
src/ui/snapshots/: grove__ui__add_repo__tests__empty_modal_renders_with_prompt_and_hint.snap  grove__ui__add_repo__tests__modal_shows_error_after_invalid_submit.snap  grove__ui__add_repo__tests__modal_shows_typed_path.snap  grove__ui__add_repo__tests__new_worktree_modal_wraps_long_error_within_modal_width.snap  grove__ui__confirm__tests__confirm_remove_modal_names_the_repo.snap  grove__ui__help__tests__modal_renders_over_app.snap  grove__ui__main_pane__tests__shows_details_when_worktree_active.snap  grove__ui__main_pane__tests__shows_details_when_worktree_active_without_terminal.snap  grove__ui__main_pane__tests__shows_prompt_when_no_worktree_active.snap  grove__ui__sidebar__tests__collapsed_repo_hides_worktrees.snap  grove__ui__sidebar__tests__cursor_on_first_repo_is_highlighted.snap  grove__ui__sidebar__tests__cursor_on_worktree_is_highlighted.snap  grove__ui__sidebar__tests__empty_state_shows_add_hint.snap  grove__ui__sidebar__tests__long_branch_name_is_truncated_when_badges_present.snap  grove__ui__sidebar__tests__navigating_down_moves_highlight.snap  grove__ui__sidebar__tests__worktrees_with_statuses_show_badges.snap
tests/: render.rs
tests/snapshots/: render__empty_frame_renders_cleanly.snap
