[package]
name = "grove"
version = "0.2.0"
edition = "2021"
description = "A TUI for cultivating git repos, worktrees, and the work inside them"
repository = "https://github.com/sebasv/grove"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
directories = "5"
futures = "0.3"
git2 = { version = "0.19", default-features = false }
notify = "7"
notify-debouncer-mini = { version = "0.4", default-features = false }
ratatui = "0.28"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
toml = "0.8"

[dev-dependencies]
insta = "1"
