[package]
name = "grove"
version = "1.1.0"
edition = "2021"
description = "A TUI for cultivating git repos, worktrees, and the work inside them"
repository = "https://github.com/sebasv/grove"
license = "MIT"
authors = ["Sebastiaan Vermeulen"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
# ratatui 0.29 uses crossterm 0.28; we pin through the default feature set.
directories = "5"
futures = "0.3"
git2 = { version = "0.20", default-features = false }
notify-debouncer-mini = { version = "0.4", default-features = false }
octocrab = "0.39"
portable-pty = "0.8"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
toml = "0.8"
tui-term = "0.2"
vt100 = "0.15"

[dev-dependencies]
insta = "1"
