[package]
name = "grove"
version = "1.1.0"
edition = "2021"
description = "A TUI for cultivating git repos, worktrees, and the work inside them"
repository = "https://github.com/sebasv/grove"
license = "MIT"
authors = ["Sebastiaan Vermeulen"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6"
futures = "0.3"
git2 = { version = "0.20", default-features = false }
notify-debouncer-mini = { version = "0.7", default-features = false }
octocrab = "0.49"
portable-pty = "0.9"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
toml = "1.1"
tui-term = "0.3.4"
vt100 = "0.16"

[dev-dependencies]
insta = "1"
